--- a/CS3/W09/MyPage.css
+++ b/CS3/W09/MyPage.css
@@ -20,19 +20,18 @@ nav {
     background-color: azure;
 }
 
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 footer {
     padding: 10px;
     border-radius: 10px;
     background-color: brown;
+}
+
+/* 로그인 CSS 추가 */
+.login_signup {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.flex-item {
+    margin-left: 10px;
 }
