--- a/CS3/W09/time.css
+++ b/CS3/W09/time.css
@@ -1,3 +1,10 @@
+div.center {
+    text-align: center;
+}
+
+button#timeBtn, button#timerBtn {
+    width: 150px;
+}
 
 
 table {
@@ -15,10 +22,61 @@ td {
     font-size: 50px;
 }
 
-#popup {
+#c_popup {
     display: none;
 }
 
 #closeBtn {
+    float: right;
+}
+
+
+div#t_popup, div#c_popup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: none;
+}
+
+div#t_popup {
+    width: 500px;
+    background-color: antiquewhite;
+}
+
+div.title, div.time{
+    text-align: center;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+}
+
+.t_btn {
+    display: flex;
+    justify-content: space-around;
+}
+
+button.start, button.stop {
+    width: 200px;
+    font-size: 30px;
+}
+
+.start {
+    background-color: blue;
+    color: white;
+}
+
+.stop {
+    background-color: red;
+    color: white;
+}
+
+#t_closeBtn {
     float: right;
 }
